[gd_scene load_steps=19 format=2]

[ext_resource path="res://Scripts/turret.gd" type="Script" id=1]
[ext_resource path="res://sprites/rogue_tank_sprites_2/towerDefense_tile228.png" type="Texture" id=2]
[ext_resource path="res://Scripts/cannon.gd" type="Script" id=3]
[ext_resource path="res://sprites/rogue_tank_sprites_2/towerDefense_tile250.png" type="Texture" id=4]
[ext_resource path="res://samples/projectil_hit.wav" type="AudioStream" id=5]
[ext_resource path="res://Scripts/weak_spot.gd" type="Script" id=6]
[ext_resource path="res://sprites/sprites/explosion1.png" type="Texture" id=7]
[ext_resource path="res://sprites/sprites/explosion2.png" type="Texture" id=8]
[ext_resource path="res://sprites/sprites/explosion3.png" type="Texture" id=9]
[ext_resource path="res://sprites/sprites/explosion4.png" type="Texture" id=10]
[ext_resource path="res://sprites/sprites/explosion5.png" type="Texture" id=11]
[ext_resource path="res://samples/tank_explosion.wav" type="AudioStream" id=12]
[ext_resource path="res://Scripts/Scenes/hp_bar.tscn" type="PackedScene" id=13]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 25.0027

[sub_resource type="CircleShape2D" id=7]

custom_solver_bias = 0.0
radius = 100.0

[sub_resource type="Animation" id=3]

resource_name = "shoot"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("cannon/sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -7.27796, 12.4921 ), Vector2( -0.277958, 12.4921 ) ]
}

[sub_resource type="CircleShape2D" id=4]

custom_solver_bias = 0.0
radius = 22.0047

[sub_resource type="Animation" id=6]

resource_name = "explode"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="turret" type="StaticBody2D" groups=[
"radar_entry",
]]

input_pickable = false
collision_layer = 0
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "Transform" ]
start_rot = 0.0
sensor_radius = 100
life = 100

[node name="sprite" type="Sprite" parent="." index="0"]

texture = ExtResource( 2 )

[node name="poly" type="CollisionPolygon2D" parent="." index="1"]

build_mode = 0
polygon = PoolVector2Array( -14.2328, 18.0456, 14.816, 18.188, 22.9326, 9.35941, 22.9326, -18.2654, -23.0613, -17.6958, -23.2037, 9.21701 )

[node name="cannon" type="Area2D" parent="." index="2"]

editor/display_folded = true
position = Vector2( -2.6161, -14.0318 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 2
collision_mask = 0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 3 )
_sections_unfolded = [ "Collision" ]

[node name="sprite" type="Sprite" parent="cannon" index="0"]

position = Vector2( -7.27796, 12.4921 )
rotation = 1.5708
texture = ExtResource( 4 )
offset = Vector2( 0.277958, -12.4921 )
_sections_unfolded = [ "Transform" ]

[node name="shape" type="CollisionShape2D" parent="cannon" index="1"]

position = Vector2( -0.142395, 7.97418 )
shape = SubResource( 1 )

[node name="sight" type="RayCast2D" parent="cannon" index="2"]

enabled = false
exclude_parent = true
cast_to = Vector2( 100, 0 )
collision_mask = 1

[node name="sensor" type="Area2D" parent="." index="3"]

editor/display_folded = true
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]

[node name="shape" type="CollisionShape2D" parent="sensor" index="0"]

shape = SubResource( 7 )

[node name="shooter_timer" type="Timer" parent="." index="4"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="cannon_anim" type="AnimationPlayer" parent="." index="5"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/shoot = SubResource( 3 )
blend_times = [  ]

[node name="shoot" type="AudioStreamPlayer" parent="." index="6"]

stream = ExtResource( 5 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "fx"

[node name="weak_spot" type="Area2D" parent="." index="7"]

editor/display_folded = true
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 2
collision_mask = 0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 6 )
_sections_unfolded = [ "Collision" ]

[node name="shape" type="CollisionShape2D" parent="weak_spot" index="0"]

position = Vector2( -4.89117, -1.89335 )
shape = SubResource( 4 )

[node name="stream_hit" type="AudioStreamPlayer2D" parent="." index="8"]

stream = ExtResource( 5 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "fx"
area_mask = 1

[node name="explosion" type="Node2D" parent="." index="9"]

editor/display_folded = true

[node name="Sprite" type="Sprite" parent="explosion" index="0"]

texture = ExtResource( 7 )
_sections_unfolded = [ "Visibility" ]

[node name="anim" type="AnimationPlayer" parent="explosion" index="1"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/explode = SubResource( 6 )
blend_times = [  ]

[node name="explode" type="AudioStreamPlayer" parent="." index="10"]

stream = ExtResource( 12 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "fx"

[node name="hp_bar" parent="." index="11" instance=ExtResource( 13 )]

margin_left = -52.0
margin_top = -47.0
margin_right = 50.0
margin_bottom = -35.0

[connection signal="body_entered" from="sensor" to="." method="_on_sensor_body_entered"]

[connection signal="body_exited" from="sensor" to="." method="_on_sensor_body_exited"]

[connection signal="timeout" from="shooter_timer" to="." method="_on_shooter_timer_timeout"]

[connection signal="damage" from="weak_spot" to="." method="_on_weak_spot_damage"]


